--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,24 @@ JWT_ACCESS_TOKEN_LIFETIME=120
 JWT_REFRESH_TOKEN_LIFETIME=7
 
 # ============================================
-# CORS CONFIGURATION
+# CORS SETTINGS
 # ============================================
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:5174
+
+# ============================================
+# JWT CONFIGURATION (Opcional - usa defaults)
+# ============================================
+JWT_ACCESS_TOKEN_LIFETIME=120
+JWT_REFRESH_TOKEN_LIFETIME=7
+
+# ============================================
+# EMAIL CONFIGURATION (Gmail)
+# ============================================
+EMAIL_HOST_USER=tu_correo@gmail.com
+EMAIL_HOST_PASSWORD=tu_contraseña_de_aplicacion
+DEFAULT_FROM_EMAIL=tu_correo@gmail.com
+
+# ============================================
+# FRONTEND URL
+# ============================================
+FRONTEND_URL=http://localhost:3000
